fixed problem with header covering anchor content

--- a/src/styles/blocks/_about-us.scss
+++ b/src/styles/blocks/_about-us.scss
@@ -11,10 +11,6 @@
     padding-right: 30px;
   }
 
-  @include onDesktop {
-    padding: 0 34px;
-  }
-
   &__img {
     grid-column: 1 / 2;
     width: 100%;
