--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    margin-bottom: 70px;
+    margin-bottom: 24px;
   }
 
   &__mobile {
