--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -36,14 +36,16 @@
   }
 
   &__section {
-    margin-bottom: 110px;
+    padding-top: 50px;
+    margin-bottom: 60px;
 
     @include onTablet {
-      margin-bottom: 140px;
+      padding-top: 70px;
+      margin-bottom: 70px;
     }
 
     @include onDesktop {
-      margin-bottom: 170px;
+      margin-bottom: 100px;
     }
   }
 }
