--- a/src/styles/blocks/_technology.scss
+++ b/src/styles/blocks/_technology.scss
@@ -1,18 +1,13 @@
 .technology {
   display: flex;
   flex-direction: column;
-  padding: 0 30px;
 
   @include onTablet {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto;
     column-gap: 20px;
-    padding: 0 0 0 30px;
-  }
-
-  @include onDesktop {
-    padding: 0 34px;
+    padding-left: 34px;
   }
 
   &__container {
